Fixed issue with the caret getting stuck on IE if there where a BR in a PRE and some output problems.

--- a/jscripts/tiny_mce/themes/advanced/skins/default/content.css
+++ b/jscripts/tiny_mce/themes/advanced/skins/default/content.css
@@ -48,3 +48,4 @@ font[face=mceinline] {font-family:inherit !important}
 .mceItemEmbeddedAudio {background-image:url(../../img/video.gif)}
 .mceItemIframe {background-image:url(../../img/iframe.gif)}
 .mcePageBreak {display:block;border:0;width:100%;height:12px;border-top:1px dotted #ccc;margin-top:15px;background:#fff url(../../img/pagebreak.gif) no-repeat center top;}
+.mceHideBrInPre pre br {display: none}
